--- a/resources/sass/manage.orderAdmin.scss
+++ b/resources/sass/manage.orderAdmin.scss
@@ -16,6 +16,12 @@
         max-width: calc(var(--per-table) * 12 / 5);
         flex: calc(var(--per-table) * 12 / 5);
     }
+    .per-12-1 {
+        display: inline-block !important;
+        overflow-y: scroll;
+        height: 94px;
+        padding-top: 5px !important;
+    }
     .per-15 {
         max-width: calc(var(--per-table) * 3);
         flex: calc(var(--per-table) * 3);
@@ -40,6 +46,8 @@
         text-align: center;
         padding: 16px 4px;
         display: flex;
+        height: 94px;
+        overflow-y: scroll;
         justify-content: center;
     }
     .admin__order-handle {
@@ -59,7 +67,7 @@
         display: block;
     }
     thead .row-tb {
-        background-color: #fff;
+        background-color: #ffed86;
         border: none;
         border-bottom: 1px solid #dd125f;
         color: #dd125f;
@@ -84,6 +92,10 @@
         padding: 20px;
         box-shadow: 10px -3px 30px rgb(0 0 0 / 13%);
         border: 1px solid #f5f5f5;
+        img {
+            width: 60px;
+            height: 60px;
+        }
     }
     .orderbook__content-dashboard-margin {
         margin: 20px -15px;
@@ -103,6 +115,14 @@
         overflow-y: scroll;
         max-height: 60px;
         margin: 0;
+    }
+     ::-webkit-scrollbar {
+        width: 5px;
+        background: light rgba(165, 157, 157, 0.5);
+    }
+     ::-webkit-scrollbar-thumb {
+        background-color: rgba(165, 157, 157, 0.5);
+        border-radius: 5px;
     }
     .admin__order-col {
         width: 150px;
@@ -352,8 +372,8 @@
         background: rgb(221, 18, 95, 0.5);
         color: #fff;
     }
-    .page-item[rel~='prev'] .page-link,
-    .page-item[rel~='next'] .page-link {
+    .page-item[rel~="prev"] .page-link,
+    .page-item[rel~="next"] .page-link {
         font-size: 20px;
         line-height: 27px;
     }
