--- a/resources/sass/manage.user.scss
+++ b/resources/sass/manage.user.scss
@@ -104,6 +104,11 @@
     .maincontainer__dashboard-typeImg-info-box-quantity {
         display: flex;
         flex-direction: column;
+        margin: auto;
+    }
+    img {
+        width: 60px;
+        height: 60px;
     }
     .maincontainer__dashboard-typeImg-info-box-quantity span {
         font-size: 16px;
@@ -188,7 +193,6 @@
     }
 }
 
-
 /* // Small devices (landscape phones, less than 768px) */
 
 @media (max-width: 767.98px) {
@@ -209,7 +213,6 @@
     }
 }
 
-
 /* // Medium devices (tablets, less than 992px) */
 
 @media (max-width: 991.98px) and (min-width: 768px) {
@@ -217,7 +220,6 @@
         margin-left: 0;
     }
 }
-
 
 /* // Large devices (desktops, less than 1200px) */
 
