--- a/resources/sass/cart.scss
+++ b/resources/sass/cart.scss
@@ -229,6 +229,7 @@
         left: 50%;
         opacity: 0;
         background-color: #fff;
+        border-radius: 2px;
     }
 
     .btn-effect:hover:before{
