--- a/resources/sass/contact.welcome.scss
+++ b/resources/sass/contact.welcome.scss
@@ -114,6 +114,7 @@
         left: 50%;
         opacity: 0;
         background-color: #fff;
+        border-radius: 3px;
     }
     .form-send:hover:before {
         transition: all 0.5s ease;
