--- a/resources/sass/content.book.scss
+++ b/resources/sass/content.book.scss
@@ -156,6 +156,7 @@
         left: 50%;
         opacity: 0;
         background-color: #fff;
+        border-radius: 2px;
     }
 
     .add-cart:hover:before, .view-cart:hover:before {
