--- a/resources/sass/profile.scss
+++ b/resources/sass/profile.scss
@@ -95,6 +95,7 @@ body {
         left: 50%;
         opacity: 0;
         background-color: #fff;
+        border-radius: 2px;
     }
 
     .btn-pro:hover:before{
