--- a/resources/sass/navbar.book.scss
+++ b/resources/sass/navbar.book.scss
@@ -434,7 +434,7 @@
         padding-left: 0;
         margin: 0;
         max-height: calc(68px * 3);
-        overflow-y: scroll;
+        overflow-y: auto;
     }
     .header__notify-item {
         margin-top: 2px;
