--- a/resources/sass/manage.book.scss
+++ b/resources/sass/manage.book.scss
@@ -123,6 +123,9 @@
         color: black;
         opacity: 0.5;
     }
+    .ddc {
+        height: 53px;
+    }
     /*content*/
     /*header*/
     .addbook__content-header {
@@ -237,7 +240,6 @@
     margin-left: 72px;
 }
 
-
 /*activeWidth*/
 
 .activeWidth .addbook__content {
@@ -284,7 +286,6 @@
     }
 }
 
-
 /* // Small devices (landscape phones, less than 768px) */
 
 @media (max-width: 767.98px) {
@@ -305,7 +306,6 @@
     }
 }
 
-
 /* // Medium devices (tablets, less than 992px) */
 
 @media (max-width: 991.98px) and (min-width: 768px) {
@@ -313,7 +313,6 @@
         margin-left: 0;
     }
 }
-
 
 /* // Large devices (desktops, less than 1200px) */
 
