--- a/resources/sass/manage.data.scss
+++ b/resources/sass/manage.data.scss
@@ -7,6 +7,9 @@
     .dashboard__content-header-box span {
         font-size: 14px;
     }
+    #searchinput {
+        height: 37px;
+    }
     .dashboard__content-header-box span span {
         color: #3490dc;
     }
