--- a/resources/sass/manage.orderAdmin.scss
+++ b/resources/sass/manage.orderAdmin.scss
@@ -199,6 +199,7 @@
     .btn-handle {
         cursor: pointer;
         margin-left: 5px;
+        height: 24px;
     }
     .table__order {
         padding: 0 0 10px 0;
