--- a/resources/sass/content.welcome.scss
+++ b/resources/sass/content.welcome.scss
@@ -324,4 +324,11 @@
         background-color: transparent;
         color: #333;
     }
+    .ddc-link {
+        padding: 12px 15px 0;
+        display: none;
+        a:hover {
+            text-decoration: none;
+        }
+    }
 }
