--- a/public/css/content.welcome.css
+++ b/public/css/content.welcome.css
@@ -377,3 +377,12 @@
   color: #333;
 }
 
+#content .ddc-link {
+  padding: 12px 15px 0;
+  display: none;
+}
+
+#content .ddc-link a:hover {
+  text-decoration: none;
+}
+
