--- a/public/css/navbar.book.css
+++ b/public/css/navbar.book.css
@@ -46,10 +46,10 @@
   border: 1px solid #ccc;
   border-right: none;
   background-color: #fff;
-  color: #000;
+  color: #ccc;
   padding: 8px 25px;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
   flex: 1;
