--- a/resources/sass/navbar.book.scss
+++ b/resources/sass/navbar.book.scss
@@ -39,10 +39,10 @@
         border: 1px solid #ccc;
         border-right: none;
         background-color: #fff;
-        color: #000;
+        color: #ccc;
         padding: 8px 25px;
         font-size: 16px;
-        font-weight: 500;
+        font-weight: 400;
         border-top-left-radius: 25px;
         border-bottom-left-radius: 25px;
         flex: 1;
@@ -257,7 +257,7 @@
         border: 1px solid #dd125f;
         color: #dd125f;
     }
-    .btn-primary:before{
+    .btn-primary:before {
         transition: all 0.5s ease;
         position: absolute;
         content: "";
@@ -268,7 +268,6 @@
         opacity: 0;
         background-color: #fff;
     }
-
     .btn-primary:hover:before {
         transition: all 0.5s ease;
         right: 0;
@@ -374,7 +373,8 @@
         transform: translateX(-50%) scaleX(1);
     }
     // notification
-    .header_nofi-link, .header_cart-link {
+    .header_nofi-link,
+    .header_cart-link {
         padding: 10px;
     }
     .header__navbar-item {
