--- a/public/css/manage.data.css
+++ b/public/css/manage.data.css
@@ -112,7 +112,7 @@
 }
 
 .dashboard__content .custom-select1 {
-  width: 50% !important;
+  width: 40% !important;
 }
 
 .dashboard__content .ribbon {
@@ -245,6 +245,7 @@
 
 .dashboard__content .chooseTypeChart input {
   height: 37px;
+  margin-right: 10px;
 }
 
 .dashboard__content .col-xl-sefl-5 {
@@ -259,28 +260,9 @@
 
 .dashboard__content .chartTypeDashBoard2 {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
-}
-
-.dashboard__content .chartTypeDashBoard2 div:nth-child(2) {
-  width: 30%;
-  display: flex;
-  justify-content: space-between;
-  display: none;
-  position: absolute;
-  bottom: 10px;
-}
-
-.dashboard__content .chartTypeDashBoard2 div:nth-child(2) img {
-  display: none;
-}
-
-.dashboard__content .chartTypeDashBoard2 div:nth-child(1) {
-  position: absolute;
-  top: 32%;
-  right: 0;
 }
 
 .dashboard__content .ssss {
