--- a/resources/sass/manage.data.scss
+++ b/resources/sass/manage.data.scss
@@ -89,7 +89,7 @@
         color: #fff;
     }
     .custom-select1 {
-        width: 50% !important;
+        width: 40% !important;
     }
     /*asdasd*/
     .ribbon {
@@ -188,7 +188,6 @@
         background-color: #74b2e6;
     }
     .chartTypeDashBoard {
-        // padding: 20px;
         input {
             width: 195px;
             height: 37px;
@@ -206,6 +205,7 @@
         position: relative;
         input {
             height: 37px;
+            margin-right: 10px;
         }
     }
     .col-xl-sefl-5 {
@@ -218,25 +218,9 @@
     }
     .chartTypeDashBoard2 {
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        flex-direction: row;
+        justify-content: flex-start;
         align-items: center;
-        div:nth-child(2) {
-            width: 30%;
-            display: flex;
-            justify-content: space-between;
-            display: none;
-            position: absolute;
-            bottom: 10px;
-            img {
-                display: none;
-            }
-        }
-        div:nth-child(1) {
-            position: absolute;
-            top: 32%;
-            right: 0;
-        }
     }
     .ssss {
         margin-left: auto !important;
